# crypto-trader

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  Yahoozee.ipynb  docker-compose.yml  docker-login  pyproject.toml  run-bot.py  strategize-hyperopt.ipynb  strategize-skopt.ipynb
trader/strategy/: ema_cross.py
