[tool.poetry]
name = "trader"
version = "0.1.0"
description = ""
authors = ["Mischa Spiegelmock <me@mish.dev>"]

[tool.poetry.dependencies]
# pyjuque = "^0.1.1"
pyjuque = { git = "https://github.com/tudorelu/pyjuque.git", rev = "388b3c62141374c50197d64971ceb23fcef52b4e" }
python = ">=3.7.1,<4.0"
pandas-ta = "^0.3.14-beta.0"
TA-Lib = "0.4.19"
hyperopt = "*"
matplotlib = "*"
python-dotenv = "0.15.0"
ipywidgets = "*"
scikit-learn = "^1.0"
scikit-optimize = "^0.9.0"
pandas = "1.2.5"
ccxt = "~1.63.64"

[tool.poetry.dev-dependencies]
prompt-toolkit = "^2.0.0"
black = "*"
epc = "*"
importmagic = "*"
ipython = "*"
jupyterlab = "^3.1.11"
python-dotenv = "0.15.0"
snakeviz = "^2.1.0"
packaging = "20.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
